Fix overflow problems for iphone screens

--- a/style.css
+++ b/style.css
@@ -121,37 +121,37 @@ a:link {
 /* Header Styles */
 
 .Header {
-	height: 130px;
+	height: fit-content;
 	width: 100%;
+	padding-bottom: 30px;
 	background-color: #c9c9c9;
-	box-shadow: 0px 20px 50px 0px rgba(0,0,0,0.6);
 }
 	
 .HeaderPos {
 	top: 30px;
 	position: relative;
+	display: flex;
 }
 
 /* The Entire Nav Bar */
 .HeaderNav {
-	padding: 4px 15px;
-	left: calc(1.5% - 10.5%);
-	margin-top: 10px;
 	justify-content: center;
 	align-items: center;
 	display: flex;
-	position: relative;
 }
 
 /* The float for the site logo */
 .HeaderLeft {
-	float: left;
+	margin-left: 30px;
+	margin-top: 5px;
+	position: relative;
 }
 
 /* All the NavBar content on the right */
 .HeaderRight {
-	float: right;
-	width: 85%;
+	width: 100%;
+	position: relative;
+	text-align: center;
 }
 
 /* The Guide Text */
@@ -181,11 +181,9 @@ a:link {
 }
 
 #HeaderTitle {
-	top: -10px;
 	width: 55%;
 	word-spacing: 10px;
-	right: calc(48.5% - 39%);
-	padding: 10px;
+	padding: 20px 0;
 	line-height: 40px;
 	text-align: center;
 	position: relative;
@@ -194,7 +192,6 @@ a:link {
 	box-shadow: var(--shadow);
 	border-radius: var(--bordersrad);
 	background: var(--paper-background);
-
 }
 
 .NavIcon {
@@ -205,12 +202,9 @@ a:link {
 }
 
 #NavLogo {
-	bottom: 10px;
 	width: 150px;
 	padding: 22px 15px 10px 15px;
-	left: 40px;
 	z-index: 1;
-	position: relative;
 	box-shadow: var(--shadow);
 	border-radius: var(--bordersrad);
 	background: var(--paper-background);
@@ -225,16 +219,12 @@ a:link {
 
 @media screen and (max-width: 1400px) {
 	.HeaderNav {
-		top: -20px;
 		width: 90%;
-		display: inline-block;
+		display: block;
+		margin: auto;
 	}
 	.HeaderLeft {
-		float: right;
-		position: relative;
-	}
-	#HeaderTitle {
-		width: 60%;
+		display: none;
 	}
 	#HeaderNavL {
 		height: fit-content;
@@ -277,34 +267,33 @@ a:link {
 		box-shadow: none;
 	}
 	#HeaderNavL {
+		border-top: 2px solid black;
 		margin-bottom: 0;
 	}
 	#HeaderNavR {
 		margin-top: -1px;
+		border-bottom: 2px solid black;
 	}
 }
 
 /* Top Body Styles */
 
 .MainBody {
-	top: 100px;
-	right: 45px;
-	width: 75%;
-	margin: auto;
-	display: table;
+	width: 1120px;
+	margin: 30px auto 0;
 	position: relative;
 	user-select: none;
 }
 
 .TopCards {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
 	gap: 20px;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .Card {
 	height: 270px;
-	width: 100%;
+	width: 360px;
 	box-sizing: border-box;
 	position: relative;
 	transition: transform .2s;
@@ -312,6 +301,7 @@ a:link {
 	color: var(--Wtext);
 	padding: 5px 140px 20px 5px;
 	display: inline-block;
+	justify-self: center;
 }
 
 .Card:hover {
@@ -327,18 +317,20 @@ a:link {
 	padding: 10px;
 	line-height: 30px;
 	width: 94%;
-	top: 325px;
+	max-width: 300px;
+	left: 50%;
+	transform: translateX(-50%);
 	text-align: center;
-	position: absolute;
 	transition: transform .2s;
 	color: var(--text);
 	box-shadow: var(--shadow);
 	border-radius: var(--bordersrad);
 	background: var(--paper-background);
+	position: relative;
 }
 
 .Supplies:hover {
-	transform: scale(1.05);
+	transform: translateX(-50%) scale(1.05);
 }
 
 .CardVial {
@@ -356,42 +348,29 @@ a:link {
 
 /* Top Body Media */
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1160px) {
 	.MainBody {
-		top: 50px;
-		right: 0px;
+		width: 740px;
+	}
+	.TopCards {
+		grid-template-columns: 1fr 1fr;
+	}
+	.Cardblocker {
+		grid-column-start: 1;
+		grid-column-end: 3;
+	}
+}
+
+@media screen and (max-width: 800px) {
+	.MainBody {
+		width: 360px;
 	}
 	.TopCards {
 		grid-template-columns: 1fr;
 	}
-	.Card {
-		width: 100%;
-	}
-	.CardText {
-		width: 50%;
-		padding-right: 100px;
-		line-height: 25px;
-	}
-	.Supplies {
-		top: 1000px;
-		padding-bottom: 80px;
-	}
-}
-
-@media screen and (max-width: 500px) {
-	.MainBody {
-		width: calc(100% - 30px);
-		margin: 15px;
-	}
-	.Card {
-		padding: 5px 120px 20px 5px;
-		height: max-content;
-	}
-	.CardVial {
-		width: 100px;
-		height: auto;
-		top: 0;
-		right: 0;
+	.Cardblocker {
+		grid-column-start: 1;
+		grid-column-end: 2;
 	}
 }
 
@@ -400,19 +379,21 @@ a:link {
 .SecondBody {
 	width: 95%;
 	height: 750px;
-	top: 400px;
 	padding: 5px;
 	border-radius: 40px 40px 0px 0px;
 	box-shadow: 0px 0px 30px 2px rgba(0,0,0,0.7);
-	margin: auto;
+	margin: 50px auto 0;
 	position: relative;
 	background-color: var(--background);
 }
 
-.MisCard, .FaqCard{
-	display: flex;
+.MisCard, .FaqCard {
+	display: grid;
 	position: relative;
 	justify-content: center;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	gap: 20px;
+	margin: 0 auto;
 }
 
 .FaqCard, .SecondBody h1:nth-child(3) {
@@ -420,11 +401,10 @@ a:link {
 	position: relative;
 }
 
-.MisCard div, .FaqCard div{
+.MisCard div, .FaqCard div {
 	width: 250px;
 	min-height: 250px;
 	padding: 5px;
-	margin-right: 50px;
 	box-shadow:
 		inset 0 -40px 40px rgba(0,0,0,0.2),
 		0 5px 6px 5px rgba(0,0,0,0.2);
@@ -434,9 +414,10 @@ a:link {
 	font-family: "Itim", serif;
 	user-select: none;
 	transition: transform 0.3s ease;
+	justify-self: center;
 }
 
-.MisCard div:hover, .FaqCard div:hover{
+.MisCard div:hover, .FaqCard div:hover {
 	transform: rotate(5deg);
 }
 
@@ -452,31 +433,28 @@ a:link {
 		height: fit-content;
 		padding-bottom: 50px;
 	}
+}
+
+@media screen and (max-width: 1189px) {
 	.MisCard, .FaqCard {
-		display: grid;
 		width: calc(80% - 40px);
+		min-width: 520px;
 		grid-template-columns: 1fr 1fr;
-		gap: 20px;
-		margin: 0 calc(10% + 20px);
 	}
 	.MisCard div, .FaqCard div {
 		width: 100%;
-		max-width: 260px;
-		min-height: 260px;
+		max-width: 250px;
+		min-height: 250px;
 		height: 100%;
-		margin: 0;
 		line-height: 20px;
 		box-sizing: border-box;
-		justify-self: center;
 	}
 }
+
 @media screen and (max-width: 600px) {
 	.MisCard, .FaqCard {
-		display: grid;
-		width: calc(80% - 40px);
+		min-width: 0;
 		grid-template-columns: 1fr;
-		gap: 20px;
-		margin: 0 calc(10% + 20px);
 	}
 }
 
@@ -497,38 +475,22 @@ a:link {
 /* Tape Styles */
 
 .Tape {
-	height: 3vmin;
-	top: -22px;
+	height: 30px;
+	top: -15px;
 	width: 180px;
 	z-index: 1;
 	opacity: 0.5;
-	left: calc(49.5% - 180px/2);
+	left: calc(50% - 180px/2);
 	position: absolute;
 	background-color: var(--tape-gray);
 	border-right: 1px dotted var(--tape-edge-gray);
 	border-left: 1px dotted var(--tape-edge-gray);
 }
 
-.T2 {
-	left: calc(0% + 55px);
-	width: 150px;
-}
-
-.T3 {
-	left: calc(47.5% - 170px/2);
-	top: 310px;
-}
-
 /* Tape Media */
 @media screen and (max-width: 1400px) {
 	.T1 {
 		display: none;
-	}
-	.T2 {
-		left: 42%;
-	}
-	.T3 {
-		top: 985px;
 	}
 }
 
